--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ gap: 40px;
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
-.product-button:hover{}
+
 /*HERO*/
 .hero {
     max-width: 1440px;
@@ -236,8 +236,6 @@ gap: 0;
     display: block;
 }
 
-/*.item::before {
-}*/
 .features-item {
     display: block;
     font-style: normal;
@@ -249,23 +247,36 @@ gap: 0;
     margin-bottom: 8px;
     margin-top: 8px;
 }
-.features-item::before {
+.item-icon {
     display: block;
     content: "";
     background-size: contain;
+    padding-top: 24px;
+    background-position: center;
+    border-radius: 4px;
+    height: 112px;
+    background-color: #f4f4fd;}
+
+
+/*
+    .item-icon {
+    display: block;
+    background-image: url(./images/sprite.svg.svg#icon-antennasvg);
     background-repeat: no-repeat;
     background-position: center;
-    height: 112px;
     background-color: #f4f4fd;
-    background-image:;
-}
-
+    }
+/*.features-item:nth-child(1)::before {
+        background-image:;
+        background-repeat: no-repeat;
+        background-position: center;
+    }*/
 
 .features-text {
     font-size: 16px;
     line-height:var(--text-line-height);
     letter-spacing: 0.02em;
-    color:var(--text);
+    color:var(--text); 
 }
 /*middle*/
 .middle {
@@ -386,15 +397,37 @@ padding-top: 110px ;
 padding-bottom: 120px ;
 }
 .social-list-icon {
-    fill: #F4F4FD;
+    color: #F4F4FD;
+    
+}
+.customers-link:is(:hover,:focus){
+    color:#404BBF;
+    border-color: #404BBF;
 }
 .customers-list{
     display: flex;
+    justify-content:space-between;
+    align-items: center;
+}
+.customers-item {
+    display: flex;
+    gap: 24px;
+}
+.customers-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
     justify-content: center;
     align-items: center;
-
-
-
+    padding: 16px 32px;
+    color: rgba(175, 177, 184, 1);
+}
+.customers-icon {
+    width: 104px;
+    height: 56px;
+    fill: currentColor;
 }
 .customers-title{
     font-weight: 700;
@@ -408,6 +441,10 @@ padding-bottom: 120px ;
     background-color: var(--background-color);
     padding-top: 100px;
     padding-bottom: 100px;
+}
+.footer-group{
+    display: flex;
+    align-items: baseline;
 }
 .footer-logo{
     font-family: 'Raleway', sans-serif;
@@ -423,7 +460,41 @@ padding-bottom: 120px ;
     margin-bottom: 16px;
     
 }
-.link {}
+.foter-left-side{
+
+}
+.footer-right-side{
+    margin-left: 120px;
+}
+.foter-right-title{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+    }
+
+.foter-right-list {
+    display: flex;
+    gap: 16px;
+}
+.footer-social-item {
+
+}
+.footer-social-link { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+.green:focus,
+.green:hover {
+    background: #31D0AA;
+}
 
 .footer-text {
     font-size: 16px;
@@ -489,17 +560,17 @@ padding-bottom: 120px ;
 .products-list {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 20px;
-    row-gap: 40px;
+    column-gap: 24px;
+    row-gap: 48px;
     padding-bottom: 120px;
 }
-.element {flex-basis: calc((100% - 48px) / 3)
-}
+
 .element {
-    box-shadow:  #E7E9FC;
+    box-shadow: 0px 1px 6px rgb(46 47 66 / 8%);
     background: #FFFFFF;
     border: 1px solid rgba(231, 233, 252, 1);
-}
+    width: calc((100% - 48px) / 3)
+    }
 
 .product-title {
     font-weight: var(--text-font-weight);
