--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ gap: 40px;
     max-width: 1440px;
     padding: 188px 0;
     height: 600px;
-    background-image:linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) , url(/images/people-office.jpg) ;
+    background-image:linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) , url(../images/people-office.jpg) ;
     background-color: var(--background-color);
     background-size: cover;
     background-position: center;
